My Sklad integration.

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <name>agrolavka</name>
     <description>Agrolavka</description>
     <properties>
-        <java.version>15</java.version>
+        <java.version>14</java.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
@@ -36,6 +36,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20201115</version>
         </dependency>
     </dependencies>
 
