--- a/src/main/resources/application.sample.yml
+++ b/src/main/resources/application.sample.yml
@@ -9,3 +9,6 @@ spring:
     view:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
+agrolavka:
+  mySkladUsername: admin@test
+  mySkladPassword: mypass
