--- a/src/main/resources/application.sample.yml
+++ b/src/main/resources/application.sample.yml
@@ -9,6 +9,20 @@ spring:
     view:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        show_sql: false
+        use_sql_comments: false
+        format_sql: true
+  datasource:
+    url: jdbc:mysql://localhost:3306/tools-rental?useSSL=false&characterEncoding=utf-8&useUnicode=true&allowPublicKeyRetrieval=True
+    username: user
+    password: password
 agrolavka:
   mySkladUsername: admin@test
   mySkladPassword: mypass
