--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /src/main/resources/application.yml
 /src/main/resources/application.bak.yml
+/src/main/resources/static/martin-platform-client/nbproject/private/
