--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>ss.agrolavka</groupId>
     <artifactId>agrolavka</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>war</packaging>
     <name>agrolavka</name>
     <description>Agrolavka</description>
