--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /src/main/resources/application.bak.yml
 /src/main/resources/static/martin-platform-client/nbproject/private/
 /src/main/resources/application.prod.yml
+/src/main/resources/application.dev.yml
