--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,8 @@
                                 <include>**/favicon.svg</include>
                                 <include>**/sitemap.xml</include>
                                 <include>**/robots.txt</include>
+                                <include>**/robots.txt</include>
+                                <!--include>**/61C994A7C8EDD5A99CE8925C8F0002CF.txt</include-->
                             </includes>
                         </resource>
                     </resources>
