--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /src/main/resources/static/martin-platform-client/nbproject/private/
 /src/main/resources/application.prod.yml
 /src/main/resources/application.dev.yml
+/src/main/resources/static/martin-platform-client/.eslintcache
