--- a/src/main/resources/static/martin-platform-client/public/manifest.json
+++ b/src/main/resources/static/martin-platform-client/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/admin/app/common/applications",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
