--- a/src/main/resources/static/martin-platform-client/public/manifest.json
+++ b/src/main/resources/static/martin-platform-client/public/manifest.json
@@ -4,8 +4,13 @@
   "icons": [
     {
       "src": "favicon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "logo64.png",
+      "type": "image/png",
+      "sizes": "64x64"
     },
     {
       "src": "logo192.png",
@@ -20,6 +25,6 @@
   ],
   "start_url": "/admin/app/common/applications",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#ffa500",
   "background_color": "#ffffff"
 }
