--- a/src/main/resources/static/martin-platform-client/package.json
+++ b/src/main/resources/static/martin-platform-client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "firebase": "^8.4.1",
     "fontsource-roboto": "^3.0.3",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
