--- a/src/main/resources/static/martin-platform-client/public/manifest.json
+++ b/src/main/resources/static/martin-platform-client/public/manifest.json
@@ -26,5 +26,6 @@
   "start_url": "/admin/app/common/applications",
   "display": "standalone",
   "theme_color": "#ffa500",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "gcm_sender_id": "1028755576776"
 }
