--- a/src/main/resources/static/martin-platform-client/public/manifest.json
+++ b/src/main/resources/static/martin-platform-client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Agrolavka Site",
-  "name": "Agrolavka Site",
+  "short_name": "Agrolavka",
+  "name": "Agrolavka",
   "icons": [
     {
       "src": "favicon.png",
