--- a/src/main/resources/static/martin-platform-client/public/manifest.json
+++ b/src/main/resources/static/martin-platform-client/public/manifest.json
@@ -3,9 +3,19 @@
   "name": "Agrolavka",
   "icons": [
     {
+      "src": "logo16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "logo24.png",
+      "sizes": "24x24",
+      "type": "image/png"
+    },
+    {
       "src": "favicon.png",
-      "sizes": "32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "sizes": "32x32",
+      "type": "image/png"
     },
     {
       "src": "logo64.png",
