--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>json</artifactId>
             <version>20201115</version>
         </dependency>
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.14</version>
+        </dependency>
         <!-- PROVIDED -->
         <dependency>
             <groupId>org.hibernate</groupId>
