--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-   version="4.0">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
     <session-config>
         <session-timeout>
             60
@@ -12,4 +12,9 @@
         <error-code>404</error-code>
         <location>/error/page-not-found</location>
     </error-page>
+    <servlet>
+        <servlet-name>home.jsp</servlet-name>
+        <jsp-file>/jsp/home.jsp</jsp-file>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 </web-app>
