--- a/src/main/resources/static/admin/package.json
+++ b/src/main/resources/static/admin/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "node ./update-build.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -62,5 +62,6 @@
     ]
   },
   "proxy": "http://localhost:9090",
-  "homepage": "/admin"
+  "homepage": "/admin",
+  "buildDate": 1630428153117
 }
