New SSL certificate

--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
                                 <include>**/sitemap.xml</include>
                                 <include>**/robots.txt</include>
                                 <include>**/robots.txt</include>
-                                <include>**/B67BBC8F57C879BB1934AF41A352E3EF.txt</include>
+                                <include>**/WPfQdfkgntN-1oW5ScC1COVV2OgWL-RwNfwNHMOC5Mg</include>
                             </includes>
                         </resource>
                     </resources>
