--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,8 @@
                             <filtering>true</filtering>
                             <directory>src/main/resources</directory>
                             <includes>
+                                <include>Roboto-Bold.ttf</include>
+                                <include>Roboto-Regular.ttf</include>
                                 <include>**/admin/build/**</include>
                                 <include>**/assets/**</include>
                                 <include>application.yml</include>
