--- a/src/main/resources/static/admin/package.json
+++ b/src/main/resources/static/admin/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@tinymce/tinymce-react": "^4.2.0",
     "firebase": "^8.4.1",
     "fontsource-roboto": "^3.0.3",
     "i18next": "^19.8.4",
