--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <session-config>
         <session-timeout>
-            720
+            5760        <!-- 4 days -->
         </session-timeout>
     </session-config>
     <error-page>
