--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,7 @@ dependencyResolutionManagement {
             library('jjwt-orgjson', 'io.jsonwebtoken', 'jjwt-orgjson').versionRef('jjwt')
             library('firebase', 'com.google.firebase', 'firebase-admin').versionRef('firebase')
             library('mailjet', 'com.mailjet', 'mailjet-client').versionRef('mailjet')
+            library('jasypt', 'com.github.ulisesbocchio', 'jasypt-spring-boot-starter').versionRef('spring-boot')
         }
     }
 }
