--- a/module/lib/security/build.gradle
+++ b/module/lib/security/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     api "org.springframework.boot:spring-boot-starter-web"
     api "org.springframework.boot:spring-boot-starter-security"
     implementation libs.jjwt.api
-    runtimeOnly project(":module:lib:notification:notification-email-mailjet")
+    runtimeOnly project(":module:lib:notification:notification-email-smtp")
     runtimeOnly libs.jjwt.impl
     runtimeOnly libs.jjwt.orgjson
     annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
