--- a/buildSrc/src/main/groovy/java-common-convention.gradle
+++ b/buildSrc/src/main/groovy/java-common-convention.gradle
@@ -21,10 +21,7 @@ jacoco {
     toolVersion = "0.8.10"
 }
 def jacocoExclusions = [
-    "ss/entity/martin/*.class",
-    "ss/entity/security/*.class",
-    "ss/martin/notification/push/firebase/*.class",
-    "ss/martin/notification/push/firebase/**/*.class"
+    "ss/entity/**/*.class"
 ]
 jacocoTestReport {
     dependsOn test
