--- a/module/lib/images-storage/build.gradle
+++ b/module/lib/images-storage/build.gradle
@@ -5,4 +5,6 @@ plugins {
 dependencies {
     api project(":module:lib:security")
     annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
+    
+    testImplementation project(":module:lib:common-test")
 }
