Security test module

--- a/module/lib/images-storage/build.gradle
+++ b/module/lib/images-storage/build.gradle
@@ -6,5 +6,5 @@ dependencies {
     api project(":module:lib:security")
     annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
     
-    testImplementation project(":module:lib:common-test")
+    testImplementation project(":module:lib:test:security-test")
 }
