--- a/module/lib/platform/build.gradle
+++ b/module/lib/platform/build.gradle
@@ -8,5 +8,5 @@ dependencies {
     runtimeOnly project(":module:lib:notification:notification-push-firebase")
     annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
     
-    testImplementation project(":module:lib:common-test")
+    testImplementation project(":module:lib:test:security-test")
 }
