--- a/module/lib/security/build.gradle
+++ b/module/lib/security/build.gradle
@@ -13,5 +13,5 @@ dependencies {
     runtimeOnly libs.jjwt.orgjson
     annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
     
-    testImplementation project(":module:lib:common-test")
+    testImplementation project(":module:lib:test:common-test")
 }
