--- a/module/lib/core/build.gradle
+++ b/module/lib/core/build.gradle
@@ -8,5 +8,5 @@ dependencies {
     api "org.springframework.boot:spring-boot-starter-validation"
     annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
     
-    testImplementation project(":module:lib:common-test")
+    testImplementation project(":module:lib:test:common-test")
 }
