--- a/module/lib/notification/notification-email-smtp/build.gradle
+++ b/module/lib/notification/notification-email-smtp/build.gradle
@@ -7,5 +7,5 @@ dependencies {
     api project(":module:lib:notification:notification-email-api")
     implementation "org.springframework.boot:spring-boot-starter-mail"
     
-    testImplementation project(":module:lib:common-test")
+    testImplementation project(":module:lib:test:common-test")
 }
