--- a/buildSrc/src/main/groovy/java-common-convention.gradle
+++ b/buildSrc/src/main/groovy/java-common-convention.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'checkstyle'
+    //id 'checkstyle'
     id 'jacoco'
     id "io.spring.dependency-management"
 }
@@ -51,7 +51,7 @@ jacocoTestReport {
 }
 check.dependsOn jacocoTestCoverageVerification
 */
-
+/*
 checkstyle {
     maxWarnings = 0
     toolVersion = "10.10.0"
@@ -67,7 +67,7 @@ tasks.withType(Checkstyle) {
         html.required = true
     }
 }
-
+*/
 tasks.withType(JavaCompile) {
     options.warnings = true
     options.compilerArgs = ["-Xlint:unchecked"]
