--- a/module/lib/notification/notification-push-firebase/build.gradle
+++ b/module/lib/notification/notification-push-firebase/build.gradle
@@ -3,10 +3,10 @@ plugins {
 }
 
 dependencies {
-    api project(":module:lib:base")
+    api project(":module:lib:security")
     api project(":module:lib:notification:notification-push-api")
     implementation "org.springframework.boot:spring-boot-starter"
     implementation libs.firebase
     
-    testImplementation project(":module:lib:common-test")
+    testImplementation project(":module:lib:test:common-test")
 }
