--- a/module/app/agrolavka/build.gradle
+++ b/module/app/agrolavka/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     runtimeOnly "com.mysql:mysql-connector-j"
     providedRuntime "org.springframework.boot:spring-boot-starter-tomcat"
     
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
     implementation project(":module:lib:platform")
     implementation project(":module:lib:images-storage")
