--- a/module/lib/test/common-test/src/main/resources/application-test.yml
+++ b/module/lib/test/common-test/src/main/resources/application-test.yml
@@ -32,7 +32,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        show_sql: false
+        show_sql: true
         use_sql_comments: false
         format_sql: true
   datasource:
