--- a/module/app/agrolavka/build.gradle
+++ b/module/app/agrolavka/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
     implementation project(":module:lib:platform")
     implementation project(":module:lib:images-storage")
+    
+    testImplementation project(":module:lib:test:security-test")
+    
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
 }
 
 def isDeploy = "deploy" in project.gradle.startParameter.taskNames
@@ -29,6 +33,10 @@ springBoot {
 
 tasks.named("bootWar") {
     launchScript()  // run as linux script/service
+}
+
+tasks.named("bootRun") {
+    sourceResources sourceSets.main
 }
 
 task copyAdminApp(type: Copy) {
