--- a/module/lib/telegram-bot/build.gradle
+++ b/module/lib/telegram-bot/build.gradle
@@ -6,5 +6,6 @@ dependencies {
     api project(":module:lib:base")
     implementation "com.fasterxml.jackson.core:jackson-databind"
     
-    testImplementation project(":module:lib:test:common-test")
+    testImplementation(platform('org.junit:junit-bom'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
 }
