--- a/module/lib/telegram-bot/build.gradle
+++ b/module/lib/telegram-bot/build.gradle
@@ -8,4 +8,5 @@ dependencies {
     
     testImplementation(platform('org.junit:junit-bom'))
     testImplementation('org.junit.jupiter:junit-jupiter')
+    testImplementation libs.wiremock
 }
