--- a/buildSrc/src/main/groovy/spring-boot-convention.gradle
+++ b/buildSrc/src/main/groovy/spring-boot-convention.gradle
@@ -2,4 +2,9 @@ plugins {
     id 'java-common-convention'
     id 'org.springframework.boot'
     id 'war'
+    id 'jacoco-report-aggregation'
+}
+
+tasks.named('check') {
+    dependsOn tasks.named('testCodeCoverageReport', JacocoReport) 
 }
