--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,3 +36,7 @@ jobs:
         JASYPT_ENCRYPTOR_PASSWORD: ${{ secrets.JASYPT_ENCRYPTOR_PASSWORD }}
     - name: jacoco-badge-generator
       uses: cicirello/jacoco-badge-generator@v2.9.0
+      with:
+        generate-branches-badge: true
+        jacoco-csv-file: >
+          module/lib/security/build/reports/jacoco/test/jacocoTestReport.csv
