--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,3 +40,7 @@ jobs:
         generate-branches-badge: true
         jacoco-csv-file: >
           module/lib/security/build/reports/jacoco/test/jacocoTestReport.csv
+    - name: Log coverage percentage
+      run: |
+        echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+        echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
