--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,8 +38,7 @@ jobs:
       uses: cicirello/jacoco-badge-generator@v2.9.0
       with:
         generate-branches-badge: true
-        jacoco-csv-file: >
-          module/lib/security/build/reports/jacoco/test/jacocoTestReport.csv
+        jacoco-csv-file: "**/jacocoTestReport.csv"
     - name: Log coverage percentage
       run: |
         echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
