--- a/module/app/agrolavka/build.gradle
+++ b/module/app/agrolavka/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "spring-boot-convention"
 }
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation "org.json:json:20201115"
     implementation "com.github.vandeseer:easytable:0.8.5"
     runtimeOnly "org.apache.tomcat.embed:tomcat-embed-jasper"
