--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,17 +42,20 @@ jobs:
         JASYPT_ENCRYPTOR_PASSWORD: ${{ secrets.JASYPT_ENCRYPTOR_PASSWORD }}
         
     - name: Jacoco badges generator
+      if: github.ref == 'refs/heads/master'
       uses: cicirello/jacoco-badge-generator@v2.9.0
       with:
         generate-branches-badge: true
         jacoco-csv-file: "**/jacocoTestReport.csv"
         
     - name: Log coverage percentage
+      if: github.ref == 'refs/heads/master'
       run: |
         echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
         echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
     - name: Commit the badge (if it changed)
+      if: github.ref == 'refs/heads/master'
       run: |
         if [[ `git status --porcelain` ]]; then
           git config --global user.name 'alex'
