--- a/module/ui/admin/package.json
+++ b/module/ui/admin/package.json
@@ -39,7 +39,7 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider --no-experimental-fetch start",
     "build": "node ./update-build.js && react-scripts --openssl-legacy-provider --no-experimental-fetch build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
