--- a/buildSrc/src/main/groovy/java-common-convention.gradle
+++ b/buildSrc/src/main/groovy/java-common-convention.gradle
@@ -17,7 +17,7 @@ test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
     testLogging {
-        events "failed"
+        events "STANDARD_OUT"
         exceptionFormat "full"
     }
 }
