--- a/module/lib/test/common-test/src/main/resources/application-test.yml
+++ b/module/lib/test/common-test/src/main/resources/application-test.yml
@@ -32,9 +32,9 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        show_sql: true
+        show_sql: false
         use_sql_comments: false
-        format_sql: true
+        format_sql: false
   datasource:
     url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
     username: sa
