--- a/buildSrc/src/main/groovy/java-common-convention.gradle
+++ b/buildSrc/src/main/groovy/java-common-convention.gradle
@@ -16,6 +16,10 @@ java {
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
+    testLogging {
+        events "STANDARD_OUT"
+        exceptionFormat "full"
+    }
 }
 jacoco {
     toolVersion = "0.8.10"
