--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ dependencyResolutionManagement {
             version('firebase', '9.1.1')
             version('mailjet', '5.2.2')
             version('wiremock', '3.0.0-beta-8')
+            version('lucene', '9.12.0')
             library('spring-boot-dependencies', 'org.springframework.boot', 'spring-boot-dependencies').versionRef('spring-boot')
             library('jjwt-api', 'io.jsonwebtoken', 'jjwt-api').versionRef('jjwt')
             library('jjwt-impl', 'io.jsonwebtoken', 'jjwt-impl').versionRef('jjwt')
@@ -23,6 +24,10 @@ dependencyResolutionManagement {
             library('mailjet', 'com.mailjet', 'mailjet-client').versionRef('mailjet')
             library('jasypt', 'com.github.ulisesbocchio', 'jasypt-spring-boot-starter').versionRef('spring-boot')
             library('wiremock', 'com.github.tomakehurst', 'wiremock-standalone').versionRef('wiremock')
+            library('luceneCore', 'org.apache.lucene', 'lucene-core').versionRef('lucene')
+            library('luceneGrouping', 'org.apache.lucene', 'lucene-grouping').versionRef('lucene')
+            library('luceneAnalyzersCommon', 'org.apache.lucene', 'lucene-analysis-common').versionRef('lucene')
+            library('luceneQueryParser', 'org.apache.lucene', 'lucene-queryparser').versionRef('lucene')
         }
     }
 }
